# orz

./: .travis.yml  README.rst  pyproject.toml  tox.ini
orz/: __init__.py  exceptions.py  result.py
tests/: conftest.py  test_result.py
