[tool.poetry]
name = "orz"
version = "0.1.0"
description = ""
authors = ["顏孜羲 <joseph.yen@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-pudb = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
